--- a/index.html
+++ b/index.html
@@ -3,52 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Child Health Monitoring System</title>
+  <title>Child Health Monitoring - Login/Sign Up</title>
   <link rel="stylesheet" href="style.css">
-  <script type="module" src="script.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <header>
     <h1>Child Health Monitoring System</h1>
   </header>
-  <main>
-    <section id="authentication">
-      <h2>Sign In / Sign Up</h2>
+
+  <section class="auth-container">
+    <div class="form-container">
+      <h2>Sign Up</h2>
       <form id="sign-up-form">
-        <input type="email" id="sign-up-email" placeholder="Email" required>
-        <input type="password" id="sign-up-password" placeholder="Password" required>
-        <button type="submit">Sign Up</button>
+        <input type="email" id="email" placeholder="Enter Email" required>
+        <input type="password" id="password" placeholder="Enter Password" required>
+        <button type="submit" id="sign-up-btn">Sign Up</button>
       </form>
+    </div>
 
-      <form id="sign-in-form">
-        <input type="email" id="sign-in-email" placeholder="Email" required>
-        <input type="password" id="sign-in-password" placeholder="Password" required>
-        <button type="submit">Sign In</button>
+    <div class="form-container">
+      <h2>Login</h2>
+      <form id="login-form">
+        <input type="email" id="login-email" placeholder="Enter Email" required>
+        <input type="password" id="login-password" placeholder="Enter Password" required>
+        <button type="submit" id="login-btn">Login</button>
       </form>
-    </section>
+    </div>
+  </section>
 
-    <section id="child-profiles">
-      <h2>Manage Child Profiles</h2>
-      <button id="add-profile-btn">Add Child Profile</button>
-      <div id="profile-list"></div>
-    </section>
-
-    <section id="growth-tracking">
-      <h2>Track Growth Metrics</h2>
-      <form id="growth-form">
-        <label>Height (cm): <input type="number" id="height" required></label>
-        <label>Weight (kg): <input type="number" id="weight" required></label>
-        <label>BMI: <input type="number" id="bmi" required></label>
-        <button type="submit">Submit Metrics</button>
-      </form>
-      <canvas id="growthChart"></canvas>
-    </section>
-
-    <section id="alerts">
-      <h2>Alerts</h2>
-      <div id="alert-list"></div>
-    </section>
-  </main>
   <footer>
     <p>&copy; 2024 Child Health Monitoring System</p>
   </footer>
