--- a/growth-tracking.html
+++ b/growth-tracking.html
@@ -19,6 +19,11 @@
       <label for="bmi">BMI: <input type="number" id="bmi" required></label>
       <button type="submit" id="submit-growth-btn">Submit Metrics</button>
     </form>
+
+    <!-- Growth Alert Notifications -->
+    <div id="growth-alert" style="display:none;">
+      <p>Your child's growth is deviating from the expected range. Please consult a doctor!</p>
+    </div>
   </section>
 
   <footer>
