--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <header>
-    <h1>Child Health Monitoring System</h1>
+    <h1>Child Health Monitoring</h1>
+    <p>Welcome to the Health Tracker for Your Child</p>
   </header>
 
   <section class="auth-container">
@@ -33,7 +34,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2024 Child Health Monitoring System</p>
+    <p>&copy; 2024 Child Health Monitoring</p>
   </footer>
 </body>
 </html>
