--- a/growth-tracking.html
+++ b/growth-tracking.html
@@ -24,6 +24,11 @@
     <div id="growth-alert" style="display:none;">
       <p>Your child's growth is deviating from the expected range. Please consult a doctor!</p>
     </div>
+
+    <!-- Congratulatory Message -->
+    <div id="congratulations" style="display:none;">
+      <p>Congratulations! Your child's health and growth are on track!</p>
+    </div>
   </section>
 
   <footer>
