--- a/child-details.html
+++ b/child-details.html
@@ -37,66 +37,55 @@
         <tr>
           <td>Polio</td>
           <td>1 Month</td>
-          <td><input type="checkbox" id="polio" /> Completed</td>
+          <td>
+            <select id="polio-status" class="vaccine-status">
+              <option value="pending">Pending</option>
+              <option value="taken">Taken</option>
+            </select>
+          </td>
         </tr>
         <tr>
           <td>Hepatitis B</td>
           <td>2 Months</td>
-          <td><input type="checkbox" id="hepatitis-b" /> Completed</td>
+          <td>
+            <select id="hepatitis-b-status" class="vaccine-status">
+              <option value="pending">Pending</option>
+              <option value="taken">Taken</option>
+            </select>
+          </td>
         </tr>
         <tr>
           <td>Diphtheria</td>
           <td>3 Months</td>
-          <td><input type="checkbox" id="diphtheria" /> Pending</td>
+          <td>
+            <select id="diphtheria-status" class="vaccine-status">
+              <option value="pending">Pending</option>
+              <option value="taken">Taken</option>
+            </select>
+          </td>
         </tr>
         <tr>
           <td>Measles</td>
           <td>9 Months</td>
-          <td><input type="checkbox" id="measles" /> Pending</td>
+          <td>
+            <select id="measles-status" class="vaccine-status">
+              <option value="pending">Pending</option>
+              <option value="taken">Taken</option>
+            </select>
+          </td>
         </tr>
         <tr>
           <td>Chickenpox</td>
           <td>1 Year</td>
-          <td><input type="checkbox" id="chickenpox" /> Pending</td>
-        </tr>
-        <tr>
-          <td>Tetanus</td>
-          <td>4-6 Years</td>
-          <td><input type="checkbox" id="tetanus" /> Pending</td>
-        </tr>
-        <tr>
-          <td>Hepatitis A</td>
-          <td>2 Years</td>
-          <td><input type="checkbox" id="hepatitis-a" /> Pending</td>
-        </tr>
-        <tr>
-          <td>Influenza (Flu)</td>
-          <td>Yearly</td>
-          <td><input type="checkbox" id="influenza" /> Pending</td>
-        </tr>
-        <tr>
-          <td>MMR (Measles, Mumps, Rubella)</td>
-          <td>1-2 Years</td>
-          <td><input type="checkbox" id="mmr" /> Pending</td>
-        </tr>
-        <tr>
-          <td>Rotavirus</td>
-          <td>2 Months</td>
-          <td><input type="checkbox" id="rotavirus" /> Completed</td>
+          <td>
+            <select id="chickenpox-status" class="vaccine-status">
+              <option value="pending">Pending</option>
+              <option value="taken">Taken</option>
+            </select>
+          </td>
         </tr>
       </tbody>
     </table>
-  </section>
-
-  <!-- Health Metrics Section -->
-  <section class="health-metrics">
-    <h2>Health Metrics</h2>
-    <p>Temperature, Blood Pressure, Heart Rate - Check their ranges below.</p>
-    <ul>
-      <li><b>Temperature:</b> 36.5°C - 37.5°C (Normal)</li>
-      <li><b>Blood Pressure:</b> 90/60 mmHg - 120/80 mmHg (Normal)</li>
-      <li><b>Heart Rate:</b> 60 - 100 bpm (Normal)</li>
-    </ul>
   </section>
 
   <footer>
